# IPDPS26-pMSz

./: CMakeLists.txt  README.md  figure10a.py  figure10b.py  figure10c.py  figure10d.py  figure11.py  figure2a.py  figure2b.py  figure8c.py  figure9a.py  figure9b.py  generate_perlin.py  pMSz  strong_scaling.sh  weak_scaling.sh
bash_files/: compression_ratio.sh  strong_scaling.sh  weak_scaling.sh
python_files/: figure10a.py  figure10b.py  figure10c.py  figure10d.py  figure11.py  figure12.py  figure2a.py  figure2b.py  figure8a.py  figure8b.py  figure8c.py  figure9a.py  figure9b.py
src/: find_best_ocr.cu  naive_MSz.cu  pMSz.cu  sync_pMSz.cu
